# cloud-nettest-framework

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO_RESULTS.md  LICENSE  LIVE_TEST_RESULTS.md  README.md  RUNNING_TESTS.md  WARP.md  logo.txt  pyproject.toml  requirements.txt  run_tests
.github/workflows/: ci.yml
configs/: inventory.yaml  oci_endpoints.yaml  oracle_quick_test.yaml  providers.yaml  registry.json  testplan.sample.yaml
docs/: ARCHITECTURE.md  LAYERED_CORRELATION.md  OCI_OBJECT_TESTS.md  OUTPUT_FORMATTING.md  PROVIDERS.md  TEST_MATRIX.md  USAGE.md
issue_1/: Oracle_Network_Analysis_Handoff_Document.md  Oracle_Network_Diagnostic_Report.md  Oracle_Object_Storage_Network_Analysis_Report.md  oracle_comprehensive.yaml  oracle_live_test.yaml  oracle_network_analyzer.sh  oracle_par_test.sh  oracle_path_diagnostic.sh  oracle_storage_performance_test.sh  quick_oracle_demo.py  run_comprehensive_oracle_tests.py
scripts/: bootstrap_hosts.sh  demo_layered_correlation.py  print_logo.py  quick_demo.sh  run_all_probes.py  run_comprehensive_test.py  run_live_network_tests.py  view_results.py
src/cnf/: __init__.py  cli.py  formatter.py  registry.py  runner.py  ssh.py  utils.py
src/cnf/providers/: __init__.py  aws.py  azure.py  gcp.py
src/cnf/tests/: __init__.py  comprehensive.py  dns.py  http.py  latency.py  layered_correlation.py  mtr.py  oci_object.py  packet_analyzer.py  packet_capture.py  throughput.py  tls.py  traceroute.py
state/: ops_log.md
