[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anubis-nettest"
version = "1.0.0"
description = "ANUBIS - Network Path Guardian: Multi-cloud network diagnostics with L3→L4→L7 correlation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ANUBIS Contributors", email = "noreply@anubis.network"},
]
keywords = [
    "network",
    "diagnostics",
    "mtr",
    "traceroute",
    "tcp",
    "packet-analysis",
    "multi-cloud",
    "oracle-cloud",
    "aws",
    "cyberpunk",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "rich>=13.0.0",
    "asyncssh>=2.13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "dnspython>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mattschwen/cloud-nettest-framework"
Documentation = "https://github.com/mattschwen/cloud-nettest-framework/tree/main/docs"
Repository = "https://github.com/mattschwen/cloud-nettest-framework"
Issues = "https://github.com/mattschwen/cloud-nettest-framework/issues"
Changelog = "https://github.com/mattschwen/cloud-nettest-framework/blob/main/CHANGELOG.md"

[project.scripts]
anubis = "cnf.cli:main"
anubis-logo = "scripts.print_logo:print_anubis_logo"

[tool.setuptools]
packages = ["cnf"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
